# c-and-cpp-examples

./: .gitignore  LICENSE
c/amd-abi/no-libc/: .gitignore  Makefile  main.c  start.S
cpp/basics/c-arrays/: CMakeLists.txt  README.md  build-and-run.cmd  build-and-run.sh
cpp/basics/c-arrays/src/: main.cpp
cpp/basics/using-static-libs/: CMakeLists.txt  build-and-run.sh
cpp/basics/using-static-libs/app/: CMakeLists.txt  main.cpp
cpp/basics/using-static-libs/lib-in-c/: CMakeLists.txt  messages.c  messages.h
cpp/basics/using-static-libs/lib-in-cpp-with-mangling/: CMakeLists.txt  vectors2.cpp  vectors2.h
cpp/basics/using-static-libs/lib-in-cpp-without-mangling/: CMakeLists.txt  vectors.cpp  vectors.h
cpp/common/TODO-using-c-from-cpp/: Makefile  build-and-run.sh
cpp/common/TODO-using-c-from-cpp/src/: c-header.h  main.cpp
cpp/common/pthread-semaphores/: Makefile  build-and-run.sh
cpp/common/pthread-semaphores/src/: main.cpp
cpp/glib/: README.md
cpp/glib/util-strings/: CMakeLists.txt  README.md  build-and-run.sh
cpp/glib/util-strings/src/: main.cpp
cpp/qt5/centralized-resources/: CMakeLists.txt  README.md  build-and-run.sh  generate-update-ts.sh
cpp/qt5/centralized-resources/assets-module/: CMakeLists.txt
cpp/qt5/centralized-resources/assets-module/graphics/: CMakeLists.txt
cpp/qt5/centralized-resources/libcentralizedresources/: CMakeLists.txt  libglobals.h  libtranslator.cpp  libtranslator.h  selftranslationloader.cpp
cpp/qt5/centralized-resources/libcentralizedresources/cmake/: template-config.cmake.in
cpp/qt5/centralized-resources/sample-app-01/: CMakeLists.txt
cpp/qt5/centralized-resources/sample-app-01/resources/: sampleapp01.desktop.in  sampleapp01.metainfo.xml
cpp/qt5/centralized-resources/sample-app-01/src/: main.cpp
cpp/qt5/centralized-resources/sample-app-01/translations/desktop/: sampleapp01.desktop.yaml  sampleapp01_es.desktop.yaml
cpp/qt5/centralized-resources/sample-app-01/translations/ts/: sampleapp01.ts  sampleapp01_es.ts
cpp/qt5/centralized-resources/shared-module/: CMakeLists.txt  shared-module-config-version.cmake.in
cpp/qt5/centralized-resources/shared-module/cmake/: SmConfigVars.cmake.in
cpp/qt5/centralized-resources/shared-module/cmake/modules/: SmCreatePkgConfigFile.cmake
cpp/qt5/centralized-resources/shared-module/cmake/modules/translations/: SmTranslateDesktop.cmake  SmTranslationLoader.cmake  SmTranslationLoader.cpp.in
cpp/qt5/dbus/: CMakeLists.txt  build-and-run.sh
cpp/qt5/dbus/service/: CMakeLists.txt  com.aldos.dbus_sample.service.xml  listener.cpp  listener.h  main.cpp  meta_types.cpp  meta_types.h  service_adaptor.cpp  service_adaptor.h
cpp/qt5/qt-app-with-mainwindow/: CMakeLists.txt  README.md  build-install-on-temp-and-test.sh  build-install-on-usr-and-run.sh  generate-update-ts.sh
cpp/qt5/qt-app-with-mainwindow/cmake/: TranslationTools.cmake
cpp/qt5/qt-app-with-mainwindow/cmake/translation/: TranslateDesktop.cmake  TranslateTs.cmake  TranslationLoader.cmake  TranslationLoader.cpp.in
cpp/qt5/qt-app-with-mainwindow/sample-app/: CMakeLists.txt
cpp/qt5/qt-app-with-mainwindow/sample-app/resources/: sample-app.desktop.in  sample-app.metainfo.xml  sample-app.qrc
cpp/qt5/qt-app-with-mainwindow/sample-app/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cpp/qt5/qt-app-with-mainwindow/sample-app/translations/desktop/: sample-app.desktop.yaml  sample-app_es.desktop.yaml
cpp/qt5/qt-app-with-mainwindow/sample-app/translations/ts/: sample-app.ts  sample-app_es.ts
cpp/qt5/shared-library/: build-and-run.sh  generate-update-ts.sh
cpp/qt5/shared-library/libsample/: CMakeLists.txt  libsampleglobals.h  libsampletranslator.cpp  libsampletranslator.h  selftranslationloader.cpp
cpp/qt5/shared-library/libsample/cmake/: template-config.cmake.in
cpp/qt5/shared-library/libsample/libsampledialog/: libsampledialog.cpp  libsampledialog.h  libsampledialog.ui
cpp/qt5/shared-library/libsample/translations/: libsample.ts  libsample_es.ts
cpp/qt5/shared-library/sample-client/: CMakeLists.txt
cpp/qt5/shared-library/sample-client/resources/: sampleclient.desktop.in  sampleclient.metainfo.xml
cpp/qt5/shared-library/sample-client/src/: main.cpp
cpp/qt5/shared-library/sample-client/translations/desktop/: sampleclient.desktop.yaml  sampleclient_es.desktop.yaml
cpp/qt5/shared-library/sample-client/translations/ts/: sampleclient.ts  sampleclient_es.ts
cpp/qt5/shared-library/shared-module/: CMakeLists.txt  shared-module-config.cmake.in
cpp/qt5/shared-library/shared-module/cmake/: SmConfigVars.cmake.in
cpp/qt5/shared-library/shared-module/cmake/modules/: SmCompilerSettings.cmake  SmCreatePortableHeaders.cmake  SmPreventInSourceBuilds.cmake  SmTranslationTools.cmake
cpp/qt5/shared-library/shared-module/cmake/modules/translations/: SmTranslationLoader.cmake
cpp/std/thread/mutex_and_condition_variable/: CMakeLists.txt  README.md  build-and-run.cmd  build-and-run.sh
cpp/std/thread/mutex_and_condition_variable/src/: main.cpp
cpp/std/vector/: CMakeLists.txt  README.md  build-and-run.cmd  build-and-run.sh
cpp/std/vector/src/: main.cpp
cpp/winapi/ipc/pipes/: README.md
cpp/winapi/ipc/pipes/simple-named-pipe/: README.md  SimpleNamedPipe.sln  build-and-run.cmd  build-and-run.ps1
cpp/winapi/ipc/pipes/simple-named-pipe/Client/: Client.vcxproj  main.cpp
cpp/winapi/ipc/pipes/simple-named-pipe/Server/: Server.vcxproj  main.cpp
